# api/swagger.json
@@ -186,6 +186,20 @@
                     "Questions"
                 ],
                 "summary": "Get All Questions",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Page number",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Page size",
+                        "name": "page_size",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -194,6 +208,12 @@
                             "items": {
                                 "$ref": "#/definitions/response.questionResponse"
                             }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.BadRequest"
                         }
                     },
                     "500": {
